<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CalculatorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:gravity="right|bottom"
                android:lines="3"
                android:text="0"
                android:textSize="25sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5">

                <Button
                    android:id="@+id/btn_cancel"
                    android:text="@string/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_divi"
                    android:text="@string/btn_divi"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_multi"
                    android:text="@string/btn_multi"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_clear"
                    android:text="@string/btn_clear"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_seven"
                    android:text="@string/btn_seven"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_eight"
                    android:text="@string/btn_eight"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_nine"
                    android:text="@string/btn_nine"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_add"
                    android:text="@string/btn_add"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_four"
                    android:text="@string/btn_four"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_five"
                    android:text="@string/btn_five"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_six"
                    android:text="@string/btn_six"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_sub"
                    android:text="@string/btn_sub"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_one"
                    android:text="@string/btn_one"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_two"
                    android:text="@string/btn_two"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_three"
                    android:text="@string/btn_three"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_rem"
                    android:text="@string/btn_rem"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_by"
                    android:text="@string/btn_by"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_zero"
                    android:text="@string/btn_zero"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_dot"
                    android:text="@string/btn_dot"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
                <Button
                    android:id="@+id/btn_equal"
                    android:text="@string/btn_equal"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:textSize="@dimen/btn_text_size"
                    android:layout_height="@dimen/btn_height"
                    android:gravity="center"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>